# soft-simd

./: .eslintrc  .gitignore  CMakeLists.txt  package-lock.json  package.json  perf.js
cpp/: baseline-api.cpp  baseline.cpp  baseline.hpp  softfloat.cpp  softsimd-api.cpp  softsimd.hpp
lib/: async-class.js  constants.js  puppeteer-pool.js  wasm-driver.js
